cargo-features = ["edition"]

[package]
name = "rolldice"
edition = "2018"
version = "0.1.0"
authors = ["Taylor Cramer <cramertj@google.com>"]

[dependencies]
rand = "=0.4.2"
structopt = "=0.2.8"

[lib]
name = "unused_third_party_build"
path = "src/lib.rs"

[patch.crates-io]
backtrace-sys = { path = "./patches/backtrace-sys" }
fuchsia-zircon = { path = "./patches/fuchsia-zircon" }
fuchsia-zircon-sys = { path = "./patches/fuchsia-zircon/fuchsia-zircon-sys" }
